--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             </td>
         </tr>
     </table>
+	<!--tabela que serve de legenda para as cores de fundo das células com os nomes dos alunos-->
     <table border="1" width="20%" align="right">
         <tr>
             <td colspan="2" align="center"><strong><font color="" face="verdana" size="2">Legenda</font></strong>
