--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<!--linha da tabela com as fotografias dos alunos-->
         <tr>
             <td align="center"><a href="imagens\grandes\24ricardopereira.jpg"><img src="imagens\pequenas\24ricardopereira.jpg"></a></td>
-            <!--células cinzentas, que representam lugares livres-->
-            <td width="200px" rowspan="2" bgcolor="#cecece"> &nbsp </td>
+            <td align="center"><a href="imagens\grandes\22migueldionisio.jpg"><img src="imagens\pequenas\22migueldionisio.jpg"></a></td>
+	    <!--célula cinzenta, que representa um lugar livre-->
             <td width="200px" rowspan="2" bgcolor="#cecece"> &nbsp </td>
             <td align="center"><a href="imagens\grandes\10danielserrano.jpg"><img src="imagens\pequenas\10danielserrano.jpg"></a></td>
         </tr>
@@ -26,6 +26,9 @@
             <td height="42px" width="200px" align="center" bgcolor="#ff9d2d">
 		<!--a tag <font> define a cor, o tipo e o tamanho de letra-->
                 <font color="#bcd120" face="verdana" size="2">24. Ricardo Pereira</font>
+            </td>
+	    <td width="200px" align="center" bgcolor="#ff9d2d">
+                <font color="#1686c2" face="verdana" size="2">22. Miguel Dionisio</font>
             </td>
             <td width="200px" align="center" bgcolor="#ff9d2d">
                 <font color="#1686c2" face="verdana" size="2">10. Daniel Serrano</font>
