--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <font color="#bcd120" face="verdana" size="2">24. Ricardo Pereira</font>
             </td>
 	    <td width="200px" align="center" bgcolor="#ff9d2d">
-                <font color="#1686c2" face="verdana" size="2">22. Miguel Dionisio</font>
+                <font color="#16a6c2" face="verdana" size="2">22. Miguel Dionisio</font>
             </td>
             <td width="200px" align="center" bgcolor="#ff9d2d">
                 <font color="#1686c2" face="verdana" size="2">10. Daniel Serrano</font>
